sandbox/output
Reorder.java:50: error: variable i is already defined in method mixInto(int,List<Integer>)
int i = 0;
    ^
1 error
